index.html views displayed

--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -2,6 +2,13 @@
 {% load static %}
 
 {% block body %}
-    <div id="like-button"></div>
-    <script type="text/babel" src="{% static 'network/react/LikeButton.js' %}"></script>
+    <div id="new-post"></div>
+    <div id="all-post"></div>
+    <div id="profile-page"></div>    
+    <div id="user-following"></div>
+    <div id="edit-post"></div>
+    
 {% endblock %}
+
+<!-- <div id="like-button"></div>
+<script type="text/babel" src="{% static 'network/react/LikeButton.js' %}"></script> -->
