1st touch on Network project

--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -2,13 +2,18 @@
 {% load static %}
 
 {% block body %}
-    <div id="new-post"></div>
-    <div id="all-post"></div>
-    <div id="profile-page"></div>    
-    <div id="user-following"></div>
-    <div id="edit-post"></div>
-    
+    <div id="content-view"></div>
+    <div id="compose-view">
+        <h3>New Post</h3>
+        <form id="compose-form">
+            <textarea 
+                    class="form-control" 
+                    id="compose-body" 
+                    placeholder="What is on your mind?">
+            </textarea>
+            <input type="submit" class="btn btn-primary"/>
+        </form>
+    </div>
 {% endblock %}
 
-<!-- <div id="like-button"></div>
-<script type="text/babel" src="{% static 'network/react/LikeButton.js' %}"></script> -->
+
