list 10 posts per page

--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -2,7 +2,8 @@
 {% load static %}
 
 {% block body %}
-    <div id="content-view"></div>
+    <div id="content-view">
+    </div>
     <div id="compose-view">
         <h3>New Post</h3>
         <form id="compose-form">
