working on Following

--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -15,7 +15,6 @@
     </div>
     <div id="content-view">
     </div>
+    <!-- <script type="text/babel" src="{% static 'network/react/Follow.js' %}"></script> -->
 {% endblock %}
-
-
 
