--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -8,9 +8,9 @@
         <link href="{% static 'network/styles.css' %}" rel="stylesheet">
         <script src="{% static 'network/index.js' %}"></script>
 
-        <!-- <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
+        <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
-        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script> -->
+        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
