--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block body %}
-    <div id="intro-view" style="display: block;"">Login first!</div>
+    <div id="intro-view" style="display: block;">Login first!</div>
     <div id="compose-view" style="display: none;">
         <h3>New Post</h3>
         <form id="compose-form">
