complete Following page

--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -23,7 +23,8 @@
                     </li>
                     
                     <li class="nav-item" id="all-posts">
-                        <a class="nav-link" href="{% url 'index' %}" >All Posts</a>
+                        <!-- <a class="nav-link" href="{% url 'index' %}" >All Posts</a> -->
+                        <a class="nav-link" href="#" >All Posts</a>
                     </li>
                     
                     <li class="nav-item">
