--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -15,6 +15,15 @@
     </div>
     <div id="content-view">
     </div>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+    </nav>
     <!-- <script type="text/babel" src="{% static 'network/react/Follow.js' %}"></script> -->
 {% endblock %}
 
