complete Edit post

--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -25,7 +25,7 @@
                     id="edit-body" 
                     placeholder="What do you want to update?">
             </textarea>
-            <input type="submit" class="btn btn-primary"/>
+            <input type="submit" class="btn btn-primary" value="Save"/>
         </form>
     </div>
     <!-- <script type="text/babel" src="{% static 'network/react/Follow.js' %}"></script> -->
