--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -8,14 +8,17 @@
             <textarea 
                     class="form-control" 
                     id="compose-body" 
-                    placeholder="What is on your mind?">
+                    placeholder="What is on your mind?"
+                    rows="3"
+            >
             </textarea>
-            <input type="submit" class="btn btn-primary"/>
+            <input type="submit" class="btn btn-primary" id="post-btn"/>
         </form>
     </div>
 
     <div id="content-view">
     </div>
+    
     
     <div id="edit-view" style="display: none;">
         <h3>Edit Post</h3>
