--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="{% url 'index' %}">PB Network</a>
             <div>
-              <ul class="navbar-nav mr-auto">
+              <ul class="navbar-nav mr-auto navbar-right">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="#" id="profile"><strong>{{ user.username }}</strong></a>
