--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -13,37 +13,40 @@
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="{% url 'index' %}">PB Network</a>
-            <div>
-              <ul class="navbar-nav mr-auto navbar-right">
-                {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="profile"><strong>{{ user.username }}</strong></a>
-                    </li>
-                    
-                    <li class="nav-item" id="all-posts">
-                        <!-- <a class="nav-link" href="{% url 'index' %}" >All Posts</a> -->
-                        <a class="nav-link" href="#" >All Posts</a>
-                    </li>
-                    
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="following">Following</a>
-                    </li>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light grid-container">
+            <img src="https://th.bing.com/th/id/OIP.FTuzNPb_oaTDiBYvu70QqgHaHJ?pid=ImgDet&w=1994&h=1924&rs=1" 
+                alt="bird_icon"
+                style="width: 70px"
+                class="grid-item"
+            >
+            <a class="navbar-brand grid-item" href="{% url 'index' %}"> PB Network</a>
+            <ul class="navbar-nav mr-auto grid-item">
+            {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="#" id="profile"><strong>{{ user.username }}</strong></a>
+                </li>
+                
+                <li class="nav-item" id="all-posts">
+                    <!-- <a class="nav-link" href="{% url 'index' %}" >All Posts</a> -->
+                    <a class="nav-link" href="#" >All Posts</a>
+                </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="#" id="following">Following</a>
+                </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">Log In</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'register' %}">Register</a>
-                    </li>
-                {% endif %}
-              </ul>
-            </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'register' %}">Register</a>
+                </li>
+            {% endif %}
+            </ul>
           </nav>
         
         <div class="body">
