--- a/project4/network/static/network/styles.css
+++ b/project4/network/static/network/styles.css
@@ -1,6 +1,6 @@
 /*----- Body ----- */
 body {
-    background-color: lightcyan;
+    background-color: lightgray;
 }
 
 /* the whole body block */
@@ -10,19 +10,17 @@ body {
 }
 
 /*---- Navigation Bar ----*/
-.grid-container {
-    display: grid;
-    grid-template-columns: 33% 33% auto;
-    /* padding: 10px; */
-  }
-  
-.grid-item {
-    text-align: center;
-  }
+.navbar-brand {
+    /* display to the center */
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
 
-.grid-item:nth-child(3) {
-    /* border: 2px solid black; */
-    margin-left: 75px;
+.navbar-nav {
+    /* display to the right with 2% indentation */
+    position: absolute;
+    right: 2%;
 }
 
 .navbar-brand {
@@ -57,7 +55,56 @@ body {
     margin-bottom: 1%;
 }
 
+.intro {
+    font-size: 15px;
+}
+
+.content {
+    font-size: 25px;
+    text-align: center;
+}
 /*----- Profile page ----- */
 .follower, .following {
     font-weight: bold;
 }
+
+/*----- Buttons -----*/
+/* Tutorial: https://www.freecodecamp.org/news/a-quick-guide-to-styling-buttons-using-css-f64d4f96337f/ */
+.btn {
+    font-size: 12px;
+}
+
+.likeBtn {
+    background: lightskyblue; 
+    /* background-image: url("http://res.freestockphotos.biz/pictures/15/15107-illustration-of-a-red-close-button-pv.png");  */
+    background-size: cover; 
+    background-position: center; 
+    display: inline-block; 
+    border: none; 
+
+    /* circle */
+    padding: 10px; 
+    width: 10px; 
+    border-radius: 900px; 
+    height: 10px; 
+
+    transition: all 0.5s; 
+    cursor: pointer;
+
+    /* text */
+    font-size: 12px;
+    color: black;
+}
+
+.editBtn {
+    background: lightskyblue; 
+    /* background-image: url("http://res.freestockphotos.biz/pictures/15/15107-illustration-of-a-red-close-button-pv.png");  */
+    background-size: cover; 
+    background-position: center; 
+    display: inline-block; 
+    border: none; 
+
+    color: black;
+}
+
+
