--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -17,7 +17,7 @@
             <img src="https://th.bing.com/th/id/OIP.FTuzNPb_oaTDiBYvu70QqgHaHJ?pid=ImgDet&w=1994&h=1924&rs=1" 
                 alt="bird_icon"
                 style="width: 70px"
-                class="header-item1"
+                class="icon"
             >
             <a class="navbar-brand" href="{% url 'index' %}"> PB Network</a>
             <ul class="navbar-nav mr-auto">
