--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -26,9 +26,12 @@
             <textarea 
                     class="form-control" 
                     id="edit-body" 
-                    placeholder="What do you want to update?">
+                    placeholder="What do you want to update?"
+                    rows="3"
+            >
+            
             </textarea>
-            <input type="submit" class="btn btn-primary" value="Save"/>
+            <input type="submit" class="btn btn-primary update" value="Update"/>
         </form>
     </div>
     <!-- <script type="text/babel" src="{% static 'network/react/Follow.js' %}"></script> -->
